# Coffeed-server

./: .env.example  .gitignore  Cargo.toml  dev.docker-compose.yml  docker-compose.yml  prod.docker-compose.yml
api-gateway/: .env.example  Cargo.toml
api-gateway/.docker/: api-gateway.dev.dockerfile  api-gateway.dockerfile
api-gateway/src/: main.rs
api-gateway/src/auth_service/: mod.rs  routes.rs
api-gateway/src/models/: mod.rs  upload_response.rs
api-gateway/src/upload_service/: mod.rs  routes.rs
auth-service/: .env.example  Cargo.toml
auth-service/.docker/: auth-service.dev.dockerfile  auth-service.dockerfile
auth-service/src/: main.rs
auth-service/src/graphql/: schema.graphql  schema.rs
auth-service/src/migrations/: V1__create_user_types.rs  V1__create_user_types.sql  V2__create_users.rs  V2__create_users.sql  mod.rs
coffees-service/: .env.example  Cargo.toml
coffees-service/.docker/: coffees-service.dockerfile
coffees-service/src/: main.rs  schema.graphql  schema.rs
coffees-service/src/routes/: mod.rs  routes.rs
coffees-service/src/utils/: mod.rs  utils.rs
src/: main.rs  schema.graphql  schema.rs
src/routes/: routes.rs
src/utils/: mod.rs  utils.rs
upload-service/: .env.example  Cargo.toml
upload-service/.docker/: upload-service.dev.dockerfile  upload-service.dockerfile
upload-service/src/: main.rs
