[package]
name = "api-gateway"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2"
actix-web = { version = "1.0.0", features=["ssl"] }
futures = "^0.1.29"
failure = "^0.1.3"
url = "^1.7.1"
# actix-http="^0.2.11"
lazy_static="^1.4.0"
actix-multipart="^0.1.5"
# Actix client multipart
# actix-multipart-rfc7578 = "^0.2.1"
# url="^2.1.0"
# bytes="^0.4.12"
env_logger = "^0.7.1"
# Serde for serialisation/deserialisation
serde = "^1.0.103"
serde_json = "^1.0.44"
serde_derive = "^1.0.103"
# Sessions
actix-session = "^0.2.0"
# Redis session
actix-redis = { version = "^0.7.0", features = ["web"] }

# Use rust-native tls
# [dependencies.reqwest]
# version="0.9.19"
# default-features = false
# features=["rustls-tls"]
