[package]
name = "api-gateway"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "^1.0.0"
actix-web = { version = "2.0.0-rc", features = ["rustls", "compress"] }
# futures = "^0.1.29"
# failure = "^0.1.3"
url = "^2.1.0"
# actix-http="^0.2.11"
lazy_static="^1.4.0"
# actix-multipart="^0.1.5"
# Actix client multipart
# actix-multipart-rfc7578 = "^0.2.1"
# url="^2.1.0"
# bytes="^0.4.12"
env_logger = "^0.7.1"
# Serde for serialisation/deserialisation
serde = { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
# Sessions
actix-session = "^0.3.0"
# Redis session
actix-redis = { version = "^0.8.0", features = ["web"] }

# Use rust-native tls
# [dependencies.reqwest]
# version="0.9.19"
# default-features = false
# features=["rustls-tls"]
