[package]
name = "api-gateway"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "^1.0.0"
actix-web = { version = "^2.0.0", features = ["rustls", "compress"] }
url = "^2.1.0"
# Evaluate env vars only once
lazy_static="^1.4.0"
env_logger = "^0.7.1"
# Serde for serialisation/deserialisation
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
# Sessions
actix-session = "^0.3.0"
# Redis session
actix-redis = { version = "^0.8.0", features = ["web"] }
