[package]
name = "auth-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# MongoDB (auth)
mongodb="0.4.0"
# Actix
actix-web = "1.0.9"
# Actix identity
actix-identity = "0.1.0"
# Sessions
actix-session = "0.2.0"
# Redis session
actix-redis = { version = "0.7.0", features = ["web"] }
# Logging
env_logger = "0.7.1"
# Serde
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
# Can't touch this (wait actix 1.1)
futures = "0.1.29"
# Evaluate env vars only once
lazy_static="^1.4.0"
# Time utility
chrono = "0.4.9"
# GraphQL
juniper = "0.14.1"
# Schema files
juniper-from-schema = "0.5.1"
