[package]
name = "auth-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-rt = "^1.0.0"
actix-web = { version = "2.0.0-rc" }
# Actix identity
# actix-identity = "0.1.0"
# Sessions
actix-session = "^0.3.0"
# Redis session
actix-redis = { version = "^0.8.0", features = ["web"] }
# MySQL
# r2d2 pool
r2d2 = "^0.8.7"
r2d2_mysql = "^16.0.0"
mysql = "^16.0.0"
# Migrations
barrel = { version="0.6.2", features = ["mysql"] }
refinery = { version="0.2.0-alpha.2", features = ["mysql"] }
# refinery-migrations = { version="0.2.0-alpha.2", features = ["mysql"] }
# NanoID
nanoid = "^0.2.0"
# Argon2 hashing
argonautica = { version = "^0.2.0", features = ["serde", "simd"] }
# Logging
env_logger = "0.7.1"
# Serde for serialisation/deserialisation
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
# Evaluate env vars only once
lazy_static="^1.4.0"
