[package]
name = "coffees-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webserver
actix-web = "1.0.8"
# File serving
# actix-files = "0.1.6"
# File upload multipart
actix-multipart = "0.1.4"
# Sessions
# actix-session = "0.2.0"
# Session with redis
# actix-redis = { version = "0.7.0", features = ["web"] }
# CORS
actix-cors = "0.1.0"
# Cross Site Request Forgery
csrf = "0.3.1"
# GraphQL
juniper = "0.14.1"
# SDL to Juniper
juniper-from-schema = "0.5.0"
# Serde for serialisation/deserialisation
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
# MongoDB
# Client
mongodb = "0.4.0"
# Other dependencies
futures = "0.1.29"
lazy_static = "1.4.0"
# Logging
# log = "0.4.8"
pretty_env_logger = "0.3.1"
# uuid = { version = "0.8.1", features = ["serde", "v4"] }
nanoid = "0.2.0"
# chrono = "0.4.9"
chrono = { version = "0.4.9", features = ["serde"] }
# derive_builder = "0.8.0"
# Authentication
# Password Hash (argon2)
argonautica = { version = "0.2", features = ["serde", "simd"] }
# JWT
jsonwebtoken = "6.0.1"
