[package]
name = "upload-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^2.0.0", features = ["rustls", "compress"] }
actix-rt = "^1.0.0"
actix-multipart = "^0.2.0"
actix-files="^0.2.1"
futures = "^0.3.1"
env_logger = "^0.7.1"
# Evaluate env vars only once
lazy_static="^1.4.0"
nanoid="^0.2.0"
url="^2.1.0"
